--- a/portfolio.html
+++ b/portfolio.html
@@ -18,7 +18,7 @@
   <div class="main">
     <header id="Home">
       <div class="navbar">
-            <span class="name" style="font-family: 'Roboto slab', sans-serif"><b>Yogesh</b></span>
+            <span class="name" style="font-family: 'Roboto slab', sans-serif"><b>Nikhil</b></span>
             <ul type="none" class="items">
                 <li><a href="#Home">Home</a></li>
                 <li><a href="#service">Services</a></li>
@@ -30,7 +30,7 @@
       <div class="personal_info">
         <div class="info">
           <h1><b>Hi! I Am</b</h1>
-          <h1 class="fullname"><b>Yogesh Doble</b></h1>       
+          <h1 class="fullname"><b>Nikhil Soni</b></h1>       
           <p>I'm a B.Tech(Cse) student from RITS-Bhopal(2k25 Batch). Currently learning <br>Full Stack Web Development.</p>
           <button class="btn btn-warning">Hire me</button>
           <div class="icons">
@@ -111,7 +111,7 @@
 
       <footer>
           <div class="half">
-            <p>Email : yogeshdoble9098@gmail.com</p>
+            <p>Email : nikhilvinodsoni2003@gmail.com</p>
 
             <span class="icon">
              <a href="https://github.com/yogeshdoble2004/Portfolio/upload/main" target="_blank" style="color:black"><i class="fa-brands fa-github"></i></a>
